--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "jsonwebtoken": "^7.4.2",
     "mongoose": "^4.11.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2"
   },
   "repository": {
     "type": "git",
